--- a/ErolAksoyResume.Business/ErolAksoyResume.Business.csproj
+++ b/ErolAksoyResume.Business/ErolAksoyResume.Business.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="8.6.2" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="8.6.2" />
   </ItemGroup>
 
   <ItemGroup>
