--- a/ErolAksoyResume.Dto/ErolAksoyResume.Dto.csproj
+++ b/ErolAksoyResume.Dto/ErolAksoyResume.Dto.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ErolAksoyResume.Entities\ErolAksoyResume.Entities.csproj" />
+  </ItemGroup>
+
 </Project>
