--- a/ErolAksoyResume.MVC.UI/ErolAksoyResume.MVC.UI.csproj
+++ b/ErolAksoyResume.MVC.UI/ErolAksoyResume.MVC.UI.csproj
@@ -15,6 +15,7 @@
     <Folder Include="Areas\Admin\AdminPanel\css\" />
     <Folder Include="Areas\Admin\Data\" />
     <Folder Include="Areas\Admin\Models\" />
+    <Folder Include="Areas\Admin\Views\SubCategory\" />
   </ItemGroup>
 
   <ItemGroup>
