--- a/ErolAksoyResume.Dto/ErolAksoyResume.Dto.csproj
+++ b/ErolAksoyResume.Dto/ErolAksoyResume.Dto.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ErolAksoyResume.Entities\ErolAksoyResume.Entities.csproj" />
   </ItemGroup>
 
